--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "3.2.0",
     "web3": "^1.6.1"
